refactor: pluralize endpoint names
